# SmoothCurve

./: CMakeLists.txt  README.md  SmoothCurve.pro  cubic_interp_wrapper.cpp  cubic_interp_wrapper.h  main.cpp  main.qml  random_points_data.cpp  random_points_data.h  random_points_view.cpp  smooth_curve.cpp  smooth_curve.h  smoothcurve.cpp  smoothcurve.h  src.cmake
app/: main.cpp  random_points_data.cpp  random_points_data.h  random_points_view.h  shader_point_node.cpp  shader_point_node.h  smooth_curve.cpp  smooth_curve.h  smooth_curve_graph.cpp  smooth_curve_graph.h  smooth_curve_node.cpp  smooth_curve_node.h  src.cmake
bezier/: src.cmake
bspline_library/: src.cmake
resource/: main.qml  qml.qrc
spline/: cubic_interp_wrapper.cpp  cubic_interp_wrapper.h  spline.h  src.cmake
